fix donate section alignment

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ background-color:#FFEEEE ;
     width: 33%;
     margin-right: 2%;
     border-radius: 5px;
-    box-shadow: 0px 0px 18px #70707026
+    box-shadow: 0px 0px 18px #70707026;
 }
 .blog-item .content{
     padding: 30px 20px;
